# year13_thingy

./: README.md  items.db  main.py  models.py  pyproject.toml
static/css/: main.css
templates/: 404.html  about.html  footer.html  found_items.html  header.html  home.html  layout.html  lost_items.html  nav.html  no_lost.html
