[tool.poetry]
name = "repl_python3_Programming-assessment-SamGiddens"
version = "0.1.0"
description = ""
authors = ["SamGiddens <<>>"]

[tool.poetry.dependencies]
python = "^3.8"
Flask = "^2.1.1"
Flask-SQLAlchemy = "^2.5.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
